source/stylesheets/site.css.scss
/* ... */
/**
  Documentation Page
**/

.chapter {
  margin: 23px 0 90px 0;

  $h3-indent: 32px;
  $body-indent: $h3-indent;

  h1 {
    font-family: "MavenProBold";
    font-size: 22px;
    text-transform: uppercase;
    color: $orange-color;
    padding: 0px 0px 15px 25px;
    background: no-repeat url(/images/chapter-mark.png) 0px 7px;
    border-bottom: 1px solid #dfd7d4;
  }

  h2 {
    width: 100%;
    font-size: 22px;
    color: $black-color;
    font-family: "MavenProBold";
  }

  h3 {
    font-family: "MavenProBold";
    font-size: 18px;
    color: $black-color;
    margin: 30px 0;
  }

  h4 {
    font-family: "MavenProBold";
    font-size: 12px;
    color: $orange-color;
    text-transform: uppercase;
    letter-spacing: 1px;
    margin: 24px 0 12px 0;
    line-height: 18px;
  }

  p {
    color: #222;
    font-size: 15px;
    line-height: 22px;
  }

  ul, ol {
    margin-left: $body-indent;
    list-style-type: disc;
    margin-bottom: 28px;

    li {
      font-size: 15px;
      margin: 10px 0 10px 0;

      p {
        padding-left: 7px;
      }
    }
  }
}


/**
  Guides Page
**/

.guides {
  #content-wrapper {
    padding: 0px 0px 20px 0px;
  }

  .anchorable-toc {
    position: relative;

    &:hover a.toc-anchor {
      display: block;
    }
  }

  a.toc-anchor {
    display: none;
    position: absolute;
    text-decoration: none;
    left: -1em;
    width: 30px;
    height: 13px;
    background: url(/images/link.png) no-repeat;
    background-size: 18px 9px;
    left: -21px;
    margin-top: 5px;
  }

  #sidebar {
    margin-top: 29px;
    width: 218px;
    margin-bottom: 28px;
    padding-bottom: 120px;
    background: #f4ece9;
    border-left: 1px solid #d4ccc8;
    border-right: 1px solid #d4ccc8;
    position: relative;

    ol#guide_list {
      li {
        font-size: 12px;
        list-style: none;
        margin: 0px;
        padding: 0px;

        p {
          padding-left: 7px;
        }

        a {
          padding: 0 10px;
          line-height: 1.2em;
        }

        > ol {
          display: none;
          background-color: #f9e7e4;
          padding: 10px 0;

          &.selected {
            display: block;
          }

          li.sub-selected {
            padding-top: 6px;
            background-color: #fcc;
            margin-bottom: 3px;
          }
        }

        &.level-1 {
          text-transform: uppercase;

          > a {
            color: #443331;
            outline: 1px solid #d5ccc8;
            padding: 12px 12px 10px 12px;
            margin-top: 1px;
          }

          &.selected > a {
            background-color: #f16f58;
            background-image: -webkit-linear-gradient(-90deg, #f67862, #e7624b);
            outline: 1px solid #b23e2a;
            color: white;
            border-top: 1px solid rgba(255,255,255,0.4);
          }

          ol {
            border-top: 1px solid #d5ccc8;
          }

          &:last-of-type ol {
            border-bottom: 1px solid #d5ccc8;
          }
        }

        &.level-2, &.level-3 {
          padding: 4px 0;

          a {
            text-transform: none;
            color: #d84a32;
            font-weight: normal;
            font-size: 12px;
          }
          &.sub-selected {
            // fancy me up.
          }
        }
      }
    }

    &:after {
      @include background-image(linear-gradient(rgba(250, 244, 241, 0), rgba(251, 245, 241, 1)));
      position: absolute;
      bottom: 0px;
      left: -2px;
      right: 0;
      width: 220px;
      height: 120px;
      content: '';
    }
  }

  #guide_search {
    background-color: #fbf8f7;
    border: 1px solid #ccc;
    position: relative;
    color: #423432;
    display: block;
    width: 100%;
    height: 40px;

    label {
      padding: 0px 0px 5px 15px;
      padding-right: 10px;
      margin-left: 10px;
      background: no-repeat url(/images/search-icon.png);
    }

    border: 0;
    input::-webkit-input-placeholder { font-style: italic; }
    input:-moz-placeholder { font-style: italic; }
    input::-moz-placeholder { font-style: italic; }

    input {
      background: none;
      font-size: 12px;
      border: 0px;
      padding: 5px 0px 5px 5px;
      height: 100%;
      width: 165px;
      outline: none;
      font-style: normal;
    }

    button {
      background: no-repeat url(/images/search-erase.png);
      width: 14px;
      border: 0px;
      height: 14px;
      position: absolute;
      cursor: pointer;
      right: 10px;
      top: 15px;
    }
  }

  table {
    width: 100%;

    thead {
      background-color: #F9E7E4;
    }

    th {
      font-weight: bold;
    }

    th, td {
      padding: 5px 10px;
    }

  }
}

.previous-guide {
  float: left;
}

.next-guide {
  float: right;
}
/* ... */

